<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.first.triviaapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        style="@style/CustomText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/welcomeID" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/MainExit"
        android:layout_below="@+id/welcomeID"
        android:id="@+id/InsideLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/trivia"
            android:layout_marginTop="27dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

        <TextView
            android:text="@string/TriviaReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            style="@style/CustomText"
            android:visibility="gone"/>
    </RelativeLayout>

    <Button
        android:text="@string/Exit"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="37dp"
        android:id="@+id/MainExit"
        android:background="@drawable/button_enable"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp" />

    <Button
        android:text="@string/StartTrivia"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/button2"
        android:layout_marginRight="27dp"
        android:layout_marginEnd="27dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_disabled"
        android:layout_alignBottom="@+id/MainExit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
