<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.first.triviaapp.Stats">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/performanceText"
        android:layout_marginTop="30dp"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/slayout"

            />
    </ScrollView>

    <TextView
        android:text="@string/CorrectAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/CorrectAns"
        style="@style/CustomText"/>

    <TextView
        android:text="@string/Yourperformance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:id="@+id/performanceText"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        style="@style/CustomText"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:id="@+id/progressBar2"
        android:layout_below="@+id/scrollView2"
        android:layout_alignLeft="@+id/performanceText"
        android:layout_alignStart="@+id/performanceText"
        />

    <TextView
        android:text="TextView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/percentageText"
        android:layout_below="@+id/scrollView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="54dp" />

    <Button
        android:text="@string/statsFinish"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/button"
        android:background="@drawable/button_enable"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickFinish" />
</RelativeLayout>
