<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.first.triviaapp.Trivia">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Qnumber"
        style="@style/CustomText"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/time"
        style="@style/CustomText"/>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="80dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/progressBar"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoadingImage"
            android:text="@string/LoadingImage"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/progressBar"
            style="@style/CustomText"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/imageView2"
        android:layout_below="@+id/Qnumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/imageView2"
        android:id="@+id/RelQuestion"
        android:layout_marginTop="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ScrollLayout"/>
        </ScrollView>
    </RelativeLayout>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/next"
        android:background="@drawable/button_disabled"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="220dp"/>

    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/previous"
        android:background="@drawable/button_disabled"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
